--- a/style.css
+++ b/style.css
@@ -101,3 +101,8 @@ body{
     font-style:  italic;
     font-weight: 900;
 }
+
+@font-face {
+    font-family: 'Jack Frost';
+    src: url(Jack\ Frost.otf);
+}
